# hadafs

./: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  hadafs-common-0.0.4-2.el7.centos.x86_64.rpm  hadafs-devel-0.0.4-2.el7.centos.x86_64.rpm  hadafs.spec  hadafs.spec.in  libtool  mk
argp-standalone/: Makefile  config.status
argp-standalone/.deps/: argp-eexst.Po  argp-fmtstream.Po  argp-help.Po  argp-parse.Po  argp-pvh.Po
argp-standalone/autom4te.cache/: requests
auth/: Makefile  Makefile.in
auth/addr/: Makefile  Makefile.in
auth/login/: Makefile  Makefile.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
booster/: Makefile  Makefile.in
booster/src/: Makefile  Makefile.am  Makefile.in  booster-fd.c  booster-fd.h  booster.c  booster_fstab.c  booster_fstab.h
doc/: Makefile  Makefile.in  porting_guide.txt
doc/examples/: Makefile  Makefile.in  io-threads.vol  protocol-server.vol  replicate.vol  stripe.vol  trace.vol  unify.vol
doc/hacker-guide/: Makefile  Makefile.in  call-stub.txt  replicate.txt
extras/: Makefile  Makefile.in
extras/ctltools/init.d/: Makefile  Makefile.am  Makefile.in
hadafsd/: Makefile  Makefile.in
libhadafs/: Makefile  Makefile.in
libhadafsclient/: Makefile  Makefile.in
transport/: Makefile  Makefile.in
xlators/: Makefile  Makefile.in
xlators/cluster/unify/src/: Makefile  Makefile.am  Makefile.in  unify.c  unify.h
xlators/cluster/unify/src/.deps/: unify.Plo
xlators/performance/qos_monitor/src/: .qos_monitor.c.un~  Makefile  Makefile.am  Makefile.in  qos_monitor.c  qos_monitor.c.0911bak  qos_monitor.c.bak  qos_monitor.c.syncbak  qos_monitor.h
xlators/performance/qos_monitor/src/.deps/: qos_monitor.Plo
xlators/protocol/server/src/: .server-protocol.c.swo  Makefile  Makefile.am  Makefile.in  name-server.c  name-server.h  ohashfn.c  server-helpers.c  server-helpers.h  server-protocol.c  server-protocol.h  server-resolve.c  server-update.c
xlators/protocol/server/src/.deps/: name-server.Plo  ohashfn.Plo  server-helpers.Plo  server-protocol.Plo  server-resolve.Plo  server-update.Plo
(+184 files in other folders)
